--- a/components/Select/Select.module.css
+++ b/components/Select/Select.module.css
@@ -12,9 +12,19 @@
   background-color: rgba(var(--background-rgb), 0.1);
 }
 
-.select:focus-within {
+.select:focus:not(.select[disabled]) {
   outline: none;
   background-color: rgba(var(--background-rgb), 0.3);
+}
+
+@media (prefers-color-scheme: dark) {
+  .select:hover:not(.select[disabled]) {
+    background-color: rgba(var(--foreground-rgb), 0.05);
+  }
+
+  .select:focus:not(.select[disabled]) {
+    background-color: rgba(var(--foreground-rgb), 0.2);
+  }
 }
 
 .icon {
